--- a/styles.css
+++ b/styles.css
@@ -2,8 +2,8 @@
 /* Your CSS Code here. */
 
 .accio{
-	height="150px";
-	width="150px";
+	height:150px;
+	width:150px;
 	background-color:#000000;
 }
 
